--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blogapi?useSSL=false&serverTimezone=UTC
     username: root
-    password: p@ssw0rd
+    password: {password}
   # hibernate properties
   jpa:
     properties:
